--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Yogz Offc</title>
+    <title>Yoggzy OFFC</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -68,7 +68,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <h1 class="text-primary m-0"><i class="fa fa-shopping-cart me-3"></i>YanaMiku Shop</h1>
+                <h1 class="text-primary m-0"><i class="fa fa-shopping-cart me-3"></i>Yoggzy OFFC</h1>
                 <!-- <img src="img/logo.png" alt="Logo"> -->
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -80,19 +80,9 @@
                     <a href="about.html" class="nav-item nav-link">Website</a>
                     <a href="service.html" class="nav-item nav-link">Services</a>
                     <a href="package.html" class="nav-item nav-link">Script Bot</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
-                        <div class="dropdown-menu m-0">
-                            <a href="destination.html" class="dropdown-item">Destination</a>
-                            <a href="booking.html" class="dropdown-item">Booking</a>
-                            <a href="team.html" class="dropdown-item">Travel Guides</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                            <a href="404.html" class="dropdown-item active">404 Page</a>
-                        </div>
-                    </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
-                <a href="https://chat.whatsapp.com/HzaF888SGaMJhEq24wP29B" class="btn btn-primary rounded-pill py-2 px-4">Join Group</a>
+                <a href="https://chat.whatsapp.com/LNuEr2mt7LyJQoEX4vfWAQ" class="btn btn-primary rounded-pill py-2 px-4">Join Group</a>
             </div>
         </nav>
 
@@ -141,8 +131,8 @@
                     <h4 class="text-white mb-3">Company</h4>
                     <a class="btn btn-link" href="about.html">About Us</a>
                     <a class="btn btn-link" href="contact.html">Contact Us</a>
-                    <a class="btn btn-link" href="https://wa.me/6285775616873">Request</a>
-                    <a class="btn btn-link" href="https://wa.me/6285775616873">FAQ & Bantuan</a>
+                    <a class="btn btn-link" href="https://wa.me/6283134801642">Request</a>
+                    <a class="btn btn-link" href="https://wa.me/6283134801642">FAQ & Bantuan</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Contact</h4>
@@ -172,16 +162,16 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="https://wa.me/6285775616873">Yogz Offc</a>, Hak cipta dilindungi undang-undang.
+                        &copy; <a class="border-bottom" href="https://wa.me/6283134801642">Yoggzy OFFC</a>, Hak cipta dilindungi undang-undang.
 
                         <!--/*** Template ini gratis selama Anda menyimpan link kredit penulis footer / link atribusi / backlink. Jika Anda ingin menggunakan template tanpa tautan kredit / tautan atribusi / tautan balik penulis footer, Anda dapat membeli Lisensi Penghapusan Kredit dari "https://htmlcodex.com/credit-removal". Terima kasih atas dukungan Anda. ***/-->
-                        Website By <a class="border-bottom" href="https://wa.me/6285775616873">Yogz Offc</a>
+                        Website By <a class="border-bottom" href="https://wa.me/6283134801642">Yoggzy OFFC</a>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
                             <a href="index.html">Home</a>
                             <a href="contact.html">Help</a>
-                            <a href="https://wa.me/6285775616873">FQAs</a>
+                            <a href="https://wa.me/6283134801642">FQAs</a>
                         </div>
                     </div>
                 </div>
