--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Yogz Offc</title>
+    <title>Yoggzy OFFC</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -92,7 +92,7 @@
                     </div>
                     <a href="contact.html" class="nav-item nav-link active">Contact</a>
                 </div>
-                <a href="https://chat.whatsapp.com/HzaF888SGaMJhEq24wP29B" class="btn btn-primary rounded-pill py-2 px-4">Join Group</a>
+                <a href="https://chat.whatsapp.com/LNuEr2mt7LyJQoEX4vfWAQ" class="btn btn-primary rounded-pill py-2 px-4">Join Group</a>
             </div>
         </nav>
 
@@ -175,8 +175,8 @@
                     <h4 class="text-white mb-3">Company</h4>
                     <a class="btn btn-link" href="about.html">About Us</a>
                     <a class="btn btn-link" href="contact.html">Contact Us</a>
-                    <a class="btn btn-link" href="https://wa.me/6285775616873">Request</a>
-                    <a class="btn btn-link" href="https://wa.me/6285775616873">FAQ & Bantuan</a>
+                    <a class="btn btn-link" href="https://wa.me/6283134801642">Request</a>
+                    <a class="btn btn-link" href="https://wa.me/6283134801642">FAQ & Bantuan</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Contact</h4>
@@ -206,16 +206,16 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="https://wa.me/6285775616873">Yogz Offc</a>, Hak cipta dilindungi undang-undang.
+                        &copy; <a class="border-bottom" href="https://wa.me/6283134801642">Yoggzy OFFC</a>, Hak cipta dilindungi undang-undang.
 
                         <!--/*** Template ini gratis selama Anda menyimpan link kredit penulis footer / link atribusi / backlink. Jika Anda ingin menggunakan template tanpa tautan kredit / tautan atribusi / tautan balik penulis footer, Anda dapat membeli Lisensi Penghapusan Kredit dari "https://htmlcodex.com/credit-removal". Terima kasih atas dukungan Anda. ***/-->
-                        Website By <a class="border-bottom" href="https://wa.me/6285775616873">Yogz Offc</a>
+                        Website By <a class="border-bottom" href="https://wa.me/6283134801642">Yoggzy OFFC</a>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
                             <a href="index.html">Home</a>
                             <a href="contact.html">Help</a>
-                            <a href="https://wa.me/6285775616873">FQAs</a>
+                            <a href="https://wa.me/6283134801642">FQAs</a>
                         </div>
                     </div>
                 </div>
