--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Yogz Offc - Shop</title>
+    <title>Yoggzy OFFC - Shop</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Yogz Offc - Shop" name="keywords">
-    <meta content="Welcome to Yogz Offc Shop. We offer various services, including script bots, website development, and more." name="description">
+    <meta content="Yoggzy OFFC - Shop" name="keywords">
+    <meta content="Welcome to Yoggzy OFFC Shop. We offer various services, including script bots, website development, and more." name="description">
     <script type="application/ld+json">
 {
     "@context": "https://yanamiku.shop",
     "@type": "Organization",
-    "name": "Yogz Offc - Shop",
-    "description": "Welcome to Yogz Offc Shop. We offer various services, including script bots, website development, and more." name="description",
+    "name": "Yoggzy OFFC - Shop",
+    "description": "Welcome to Yoggzy OFFC Shop. We offer various services, including script bots, website development, and more." name="description",
     "url": "https://yanamiku.shop",
     "logo": "https://iili.io/JCcJl8x.jpg"
     "contactPoint": {
@@ -109,7 +109,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
             <a href="index" class="navbar-brand p-0">
-                <h1 class="text-primary m-0"><i class="fa fa-shopping-cart me-3"></i>Yogz Offc Shop</h1>
+                <h1 class="text-primary m-0"><i class="fa fa-shopping-cart me-3"></i>Yoggzy OFFC Shop</h1>
                 <!-- <img src="img/logo.png" alt="Logo"> -->
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -133,7 +133,7 @@
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
-                <a href="https://chat.whatsapp.com/HzaF888SGaMJhEq24wP29B" class="btn btn-primary rounded-pill py-2 px-4">Join Group</a>
+                <a href="https://chat.whatsapp.com/LNuEr2mt7LyJQoEX4vfWAQ" class="btn btn-primary rounded-pill py-2 px-4">Join Group</a>
             </div>
         </nav>
 
@@ -141,7 +141,7 @@
             <div class="container py-5">
                 <div class="row justify-content-center py-5">
                     <div class="col-lg-10 pt-lg-5 mt-lg-5 text-center">
-                        <h1 class="display-3 text-white animated slideInDown">Welcome To Yogz Offc Shop✨</h1>
+                        <h1 class="display-3 text-white animated slideInDown">Welcome To Yoggzy OFFC Shop✨</h1>
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb justify-content-center">
                                 <li class="breadcrumb-item"><a href="#">Home</a></li>
@@ -160,7 +160,7 @@
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <h6 class="section-title bg-white text-center text-primary px-3">Home</h6>
-                <h1 class="mb-5" href= "https://wa.me/6285775616873">Our Service</h1>
+                <h1 class="mb-5" href= "https://wa.me/6283134801642">Our Service</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -263,8 +263,8 @@
                     <h4 class="text-white mb-3">Company</h4>
                     <a class="btn btn-link" href="about.html">About Us</a>
                     <a class="btn btn-link" href="contact.html">Contact Us</a>
-                    <a class="btn btn-link" href="https://wa.me/6285775616873">Request</a>
-                    <a class="btn btn-link" href="https://wa.me/6285775616873">FAQ & Bantuan</a>
+                    <a class="btn btn-link" href="https://wa.me/6283134801642">Request</a>
+                    <a class="btn btn-link" href="https://wa.me/6283134801642">FAQ & Bantuan</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Contact</h4>
@@ -308,13 +308,13 @@
                         &copy; <a class="border-bottom" href="#">YanaMiku-Project</a>, Hak cipta dilindungi undang-undang.
 
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Dev By <a class="border-bottom" href="https://wa.me/6285775616873">Iyuzaki Yanagi</a>
+                        Dev By <a class="border-bottom" href="https://wa.me/6283134801642">Iyuzaki Yanagi</a>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
                             <a href="index.html">Home</a>
                             <a href="contact.html">Help</a>
-                            <a href="https://wa.me/6285775616873">FQAs</a>
+                            <a href="https://wa.me/6283134801642">FQAs</a>
                         </div>
                     </div>
                 </div>
