--- a/package.html
+++ b/package.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Yogz Offc</title>
+    <title>Yoggzy OFFC</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -92,7 +92,7 @@
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
-                <a href="https://chat.whatsapp.com/HzaF888SGaMJhEq24wP29B" class="btn btn-primary rounded-pill py-2 px-4">Join Group</a>
+                <a href="https://chat.whatsapp.com/LNuEr2mt7LyJQoEX4vfWAQ" class="btn btn-primary rounded-pill py-2 px-4">Join Group</a>
             </div>
         </nav>
 
@@ -148,7 +148,7 @@
                             <p>Free Apikey</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Lihat Fitur</a>
-                                <a href="https://wa.me/6285775616873?text=buysc+neoxr" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
+                                <a href="https://wa.me/6283134801642?text=buysc+neoxr" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
                             </div>
                         </div>
                     </div>
@@ -177,7 +177,7 @@
                             <p>2. Free Feature Update</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Lihat Fitur</a>
-                                <a href="https://wa.me/6285775616873?text=buysc+rpg" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
+                                <a href="https://wa.me/6283134801642?text=buysc+rpg" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
                             </div>
                         </div>
                     </div>
@@ -206,7 +206,7 @@
                             <p>2. Free Feature Update</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Lihat Fitur</a>
-                                <a href="https://wa.me/6285775616873?text=buysc+game" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
+                                <a href="https://wa.me/6283134801642?text=buysc+game" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
                             </div>
                         </div>
                     </div>
@@ -235,7 +235,7 @@
                             <p>2. Free Feature Update</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Lihat Fitur</a>
-                                <a href="https://wa.me/6285775616873?text=buysc+rpg&game" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
+                                <a href="https://wa.me/6283134801642?text=buysc+rpg&game" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
                             </div>
                         </div>
                     </div>
@@ -264,7 +264,7 @@
                             <p>2. Free Feature Update</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Lihat Fitur</a>
-                                <a href="https://wa.me/6285775616873?text=buysc+automatic" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
+                                <a href="https://wa.me/6283134801642?text=buysc+automatic" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
                             </div>
                         </div>
                     </div>
@@ -293,7 +293,7 @@
                             <p>2. Free Feature Update</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Lihat Fitur</a>
-                                <a href="https://wa.me/6285775616873?text=buysc+cs" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
+                                <a href="https://wa.me/6283134801642?text=buysc+cs" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
                             </div>
                         </div>
                     </div>
@@ -322,7 +322,7 @@
                             <p>2. Free Feature Update</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Lihat Fitur</a>
-                                <a href="https://wa.me/6285775616873?text=buysc+jb-store" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
+                                <a href="https://wa.me/6283134801642?text=buysc+jb-store" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
                             </div>
                         </div>
                     </div>
@@ -351,7 +351,7 @@
                             <p>2. Free Feature Update</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Lihat Fitur</a>
-                                <a href="https://wa.me/6285775616873?text=buysc+store" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
+                                <a href="https://wa.me/6283134801642?text=buysc+store" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
                             </div>
                         </div>
                     </div>
@@ -380,7 +380,7 @@
                             <p>2. Free Feature Update</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Lihat Fitur</a>
-                                <a href="https://wa.me/6285775616873?text=buysc+guard-group" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
+                                <a href="https://wa.me/6283134801642?text=buysc+guard-group" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
                             </div>
                         </div>
                     </div>
@@ -410,7 +410,7 @@
                             <p>3. Free Apikey</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Lihat Fitur</a>
-                                <a href="https://wa.me/6285775616873?text=buysc+downloader" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
+                                <a href="https://wa.me/6283134801642?text=buysc+downloader" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
                             </div>
                         </div>
                     </div>
@@ -439,7 +439,7 @@
                             <p>2. Free Feature Update</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Lihat Fitur</a>
-                                <a href="https://wa.me/6285775616873?text=buysc+panel" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
+                                <a href="https://wa.me/6283134801642?text=buysc+panel" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
                             </div>
                         </div>
                     </div>
@@ -469,7 +469,7 @@
                             <p>3. Request Features</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Lihat Fitur</a>
-                                <a href="https://wa.me/6285775616873?text=buysc+v1" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
+                                <a href="https://wa.me/6283134801642?text=buysc+v1" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
                             </div>
                         </div>
                     </div>
@@ -499,7 +499,7 @@
                             <p>3. Request Features</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Lihat Fitur</a>
-                                <a href="https://wa.me/6285775616873?text=buysc+v2" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
+                                <a href="https://wa.me/6283134801642?text=buysc+v2" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
                             </div>
                         </div>
                     </div>
@@ -529,7 +529,7 @@
                             <p>3. Request Features</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Lihat Fitur</a>
-                                <a href="https://wa.me/6285775616873?text=buysc+v3" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
+                                <a href="https://wa.me/6283134801642?text=buysc+v3" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
                             </div>
                         </div>
                     </div>
@@ -559,7 +559,7 @@
                             <p>3. Request Features</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Lihat Fitur</a>
-                                <a href="https://wa.me/6285775616873?text=buysc+v4" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
+                                <a href="https://wa.me/6283134801642?text=buysc+v4" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
                             </div>
                         </div>
                     </div>
@@ -589,7 +589,7 @@
                             <p>3. Request Features</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Lihat Fitur</a>
-                                <a href="https://wa.me/6285775616873?text=buysc+v5" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
+                                <a href="https://wa.me/6283134801642?text=buysc+v5" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
                             </div>
                         </div>
                     </div>
@@ -620,7 +620,7 @@
                             <p>4. Request Features</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="#" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Lihat Fitur</a>
-                                <a href="https://wa.me/6285775616873?text=buysc+vip" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
+                                <a href="https://wa.me/6283134801642?text=buysc+vip" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Beli</a>
                             </div>
                         </div>
                     </div>
@@ -686,8 +686,8 @@
                     <h4 class="text-white mb-3">Company</h4>
                     <a class="btn btn-link" href="about.html">About Us</a>
                     <a class="btn btn-link" href="contact.html">Contact Us</a>
-                    <a class="btn btn-link" href="https://wa.me/6285775616873">Request</a>
-                    <a class="btn btn-link" href="https://wa.me/6285775616873">FAQ & Bantuan</a>
+                    <a class="btn btn-link" href="https://wa.me/6283134801642">Request</a>
+                    <a class="btn btn-link" href="https://wa.me/6283134801642">FAQ & Bantuan</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Contact</h4>
@@ -717,16 +717,16 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="https://wa.me/6285775616873">YanaMiku-Project</a>, Hak cipta dilindungi undang-undang.
+                        &copy; <a class="border-bottom" href="https://wa.me/6283134801642">YanaMiku-Project</a>, Hak cipta dilindungi undang-undang.
 
                         <!--/*** Template ini gratis selama Anda menyimpan link kredit penulis footer / link atribusi / backlink. Jika Anda ingin menggunakan template tanpa tautan kredit / tautan atribusi / tautan balik penulis footer, Anda dapat membeli Lisensi Penghapusan Kredit dari "https://htmlcodex.com/credit-removal". Terima kasih atas dukungan Anda. ***/-->
-                        Website By <a class="border-bottom" href="https://wa.me/6285775616873">Iyuzaki Yanagi</a>
+                        Website By <a class="border-bottom" href="https://wa.me/6283134801642">Iyuzaki Yanagi</a>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
                             <a href="index.html">Home</a>
                             <a href="contact.html">Help</a>
-                            <a href="https://wa.me/6285775616873">FQAs</a>
+                            <a href="https://wa.me/6283134801642">FQAs</a>
                         </div>
                     </div>
                 </div>
