--- a/404.html
+++ b/404.html
@@ -169,8 +169,8 @@
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
-                            <a href="index.html">Home</a>
-                            <a href="contact.html">Help</a>
+                            <a href="/">Home</a>
+                            <a href="/contact">Help</a>
                             <a href="https://wa.me/6283134801642">FQAs</a>
                         </div>
                     </div>
