--- a/contact.html
+++ b/contact.html
@@ -123,7 +123,7 @@
                         </div>
                         <div class="ms-3">
                             <h5 class="text-primary">Location</h5>
-                            <p class="mb-0">YanaMiku, Jawa Tengah, Tegal</p>
+                            <p class="mb-0">Yoggzy OFFC, Bangka Tengah, Terak</p>
                         </div>
                     </div>
                     <div class="d-flex align-items-center mb-4">
@@ -132,8 +132,8 @@
                         </div>
                         <div class="ms-3">
                             <h5 class="text-primary">Customer Service</h5>
-                            <p class="mb-0">+62 857-7561-6873</p>
-                            <p class="mb-o">+62 857-9358-9243</p>
+                            <p class="mb-0">+62 831-3480-1642</p>
+                            <p class="mb-o">+62 831-5144-3585</p>
                         </div>
                     </div>
                     <div class="d-flex align-items-center">
@@ -142,7 +142,7 @@
                         </div>
                         <div class="ms-3">
                             <h5 class="text-primary">Email</h5>
-                            <p class="mb-0">yanamikubotz@gmail.com</p>
+                            <p class="mb-0">support@yoggzyoffc.my.id</p>
                         </div>
                     </div>
                 </div>
