--- a/package.html
+++ b/package.html
@@ -68,7 +68,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
             <a href="index.html" class="navbar-brand p-0">
-                <h1 class="text-primary m-0"><i class="fa fa-shopping-cart me-3"></i>Yogz Offc</h1>
+                <h1 class="text-primary m-0"><i class="fa fa-shopping-cart me-3"></i>Yoggzy OFFC</h1>
                 <!-- <img src="img/logo.png" alt="Logo"> -->
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -78,7 +78,6 @@
                 <div class="navbar-nav ms-auto py-0">
                     <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="about.html" class="nav-item nav-link">Website</a>
-                    <a href="service.html" class="nav-item nav-link">Services</a>
                     <a href="package.html" class="nav-item nav-link active">Script Bot</a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
