--- a/package.html
+++ b/package.html
@@ -706,10 +706,10 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="https://wa.me/6283134801642">YanaMiku-Project</a>, Hak cipta dilindungi undang-undang.
+                        &copy; <a class="border-bottom" href="https://wa.me/6283134801642">Yoggzy OFFC</a>, Hak cipta dilindungi undang-undang.
 
                         <!--/*** Template ini gratis selama Anda menyimpan link kredit penulis footer / link atribusi / backlink. Jika Anda ingin menggunakan template tanpa tautan kredit / tautan atribusi / tautan balik penulis footer, Anda dapat membeli Lisensi Penghapusan Kredit dari "https://htmlcodex.com/credit-removal". Terima kasih atas dukungan Anda. ***/-->
-                        Website By <a class="border-bottom" href="https://wa.me/6283134801642">Iyuzaki Yanagi</a>
+                        Website By <a class="border-bottom" href="https://wa.me/6283134801642">Yoggzy OFFC</a>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <div class="footer-menu">
