--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
                 <div class="navbar-nav ms-auto py-0">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
                     <a href="about.html" class="nav-item nav-link">Website</a>
-                    <a href="service.html" class="nav-item nav-link">Services</a>
                     <a href="package.html" class="nav-item nav-link">Script Bot</a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
@@ -167,7 +166,7 @@
                         <div class="p-4">
                             <i class="fa fa-3x fa-laptop-code text-primary mb-4"></i>
                             <h5>Jasa</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                            <p>Menyediakan Layanan Top Up All Game Termurah Dan 100% Legal</p>
                         </div>
                     </div>
                 </div>
