--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item rounded pt-3">
                         <div class="p-4">
-                            <i class="fa fa-3x fa-laptop-code text-primary mb-4"></i>
+                            <i class="fa fa-3x fa-gamepad text-primary mb-4"></i>
                             <h5>Jasa</h5>
                             <p>Menyediakan Layanan Top Up All Game Termurah Dan 100% Legal</p>
                         </div>
