--- a/contact.html
+++ b/contact.html
@@ -145,9 +145,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.995715099416!2d109.13598749999999!3d-6.928089699999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6fb9bc2114422f%3A0x8d3a68d5d6dfa193!2sYanaMiku%2C%20Jl.%20Kemasan%20Timur%20No.02%2C%20Kalimati%2C%20Kec.%20Adiwerna%2C%20Kabupaten%20Tegal%2C%20Jawa%20Tengah%2052194!5e0!3m2!1sen!2sid!4v1603794290143!5m2!1sen!2sid" width="300" height="350" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                </div>
+                <div class="mapouter"><div class="gmap_canvas"><iframe width="300" height="350" id="gmap_canvas" src="https://maps.google.com/maps?q=Yoggzy+OFFC&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://timenowin.net/">online clock</a><br><a href="https://www.analarmclock.com/"></a><br><style>.mapouter{position: relative;text-align: right;height: 350px;width: 300px;}</style><a href="https://www.mapembed.net">google maps on website</a><style>.gmap_canvas{overflow: hidden;background: none !important;height: 350px;width: 300px;}</style></div></div>
                 <div class="col-lg-4 col-md-12 wow fadeInUp" data-wow-delay="0.5s">
                 </div>
             </div>
