--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h5>Hubungi Kami</h5>
-                    <p class="mb-4">Ada jutaan bintang di langit tapi cuma ada satu bintang di hatiku, yaitu kamu💕</p>
+                    <p class="mb-4">Jika kamu tidak melangkah ke depan, kamu akan tetap berada di tempat yang sama</p>
                     <div class="d-flex align-items-center mb-4">
                         <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary" style="width: 50px; height: 50px;">
                             <i class="fa fa-map-marker-alt text-white"></i>
